<resources>
    <string name="app_name">Tá em Casa</string>
    <string name="main_activity">Main</string>
    <string name="login_activity">Login</string>
    <string name="description">Image</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <!-- Tela de login -->
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="naopossuicadastro">Não possui cadastro?</string>
    <string name="permanecerconectado">Permanecer conectado</string>

    <!-- Tela de cadastro -->
    <string name="name">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="confirmarsenha">Confirmar Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">Voltar</string>

    <string name="conectando">Efetuando registro…</string>
    <string name="efetuandoLogin">Efetuando login…</string>

    <!-- Menu principal -->
    <string name="title_activity_menu">Tá em Casa</string>

    <!-- Perfil de vaga -->
    <string name="vagas">Vagas disponíveis</string>
    <string name="qtdvagas">%1$d vagas</string>
    <string name="valor">Valor mensal</string>
    <string name="precovaga">R$ %1$d</string>
    <string name="qtdmoradores">Moradores: %1$d</string>
    <string name="desc">Descrição</string>

    <string name="endereco">Endereço</string>
    <string name="enderecotext">%1$s, %2$d - %3$s</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="coord">Coordenadas</string>
    <string name="coordtext">%1$s; %2$s</string>

    <!-- Opcoes do menu principal -->
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="configura_es">Configurações</string>

    <!-- Cadastro de moradia -->
    <string name="localiza_o">LOCALIZAÇÃO</string>
    <string name="dica">Pode ser o nome da república, ou o nome do prédio. Pode usar a imaginação também, se quiser :P</string>
    <string name="nome_da_moradia">Nome da moradia</string>
    <string name="apto_ou_rep">apartamento ou república?</string>
    <string name="estado">Estado</string>
    <string name="complemento">Complemento</string>
    <string name="n_mero">Número</string>
    <string name="logradouro">Logradouro</string>
    <string name="endere_o">Endereço</string>
    <string name="_25_completo">0% Completo</string>
    <string name="apartamento">Apartamento</string>
    <string name="rep_blica">República</string>
    <string name="a_moradia">a moradia é...</string>
    <string name="calma">Calma</string>
    <string name="agitada">Agitada</string>
    <string name="masculina">Masculina</string>
    <string name="feminina">Feminina</string>
    <string name="unissex">Unissex</string>
    <string name="qual_a_quantidade_de_moradores">qual a quantidade de moradores?</string>
    <string name="aceitam_animais">Aceitam animais?</string>
    <string name="telefone_para_contato">telefone para contato</string>
    <string name="descreva_a_moradia">Descreva a moradia</string>
    <string name="descri_o">Descrição</string>
    <string name="adicionar_moradia">Adicionar Moradia</string>
    <string name="pick_image_intent_text">Pick Image Text</string>
    <string name="nova_vaga">Nova vaga em %1$s</string>


    <!--Edição de Moradia-->
    <string name="editar_vaga">Editando vaga em %1$s</string>

</resources>
