<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:height="0dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="48dip"
                android:layout_marginRight="48dip"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitEnd"
                android:src="@mipmap/logo" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/my_login_form"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_weight="1"
            android:height="0dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:visibility="visible" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:visibility="visible" />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="login"
                android:text="@string/entrar"
                android:visibility="visible" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:height="0dp">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_progress"
                android:layout_marginLeft="24dip"
                android:layout_marginTop="16dip"
                android:text="@string/permanecerconectado" />

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textConectando"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_progress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/efetuandoLogin"
                android:visibility="gone" />

            <Button
                android:id="@+id/naoCadastrado"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="RegisterAccount"
                android:text="@string/naopossuicadastro"
                android:textAllCaps="false" />

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>



